[project]
name = "ais-dev2il-ais-power-smoothie-cook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyjokes>=0.8.3",
    "rich>=14.2.0",
    "flask==0.5"
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.3.4",
    "pytest-html>=4.1.1",
]

[tool.uv-secure.ignore_packages]
# Ignores all vulnerabilities for Flask version 0.5
# Flask = ["==0.5"]

[tool.uv-secure.vulnerability_criteria]
# Ignores only this specific vulnerability ID
ignore_vulnerabilities = ["PYSEC-2019-179"]